[package]
name = "pji"
version = "0.1.5"
edition = "2021"
authors = ["zhanba c5e1856@gmail.com"]
description = "A CLI for managing, finding, and opening Git repositories."
license = "MIT"
repository = "https://github.com/zhanba/pji"
keywords = ["git", "repo", "manager", "project", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
arboard = "3.4.1"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.28", features = ["derive"] }
comfy-table = "7.1.4"
confy = "0.6.1"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
directories = "6.0.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
webbrowser = "1.0.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
