[package]
name = "pji"
version = "0.1.7"
edition = "2021"
authors = ["zhanba c5e1856@gmail.com"]
description = "A CLI for managing, finding, and opening Git repositories."
license = "MIT"
repository = "https://github.com/zhanba/pji"
keywords = ["git", "repo", "manager", "project", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
arboard = "3.6.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
comfy-table = "7.2.1"
confy = "0.6.1"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
directories = "6.0.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
webbrowser = "1.0.6"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
