[package]
name = "pji"
version = "0.2.0"
edition = "2021"
authors = ["zhanba c5e1856@gmail.com"]
homepage = "https://github.com/zhanba/pji"
description = "A CLI for managing, finding, and opening Git repositories."
license = "MIT"
repository = "https://github.com/zhanba/pji"
keywords = ["git", "repo", "manager", "project", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
arboard = "3.6.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = "7.2.2"
confy = "2.0.0"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2"
webbrowser = "1.2.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
